testsuite/tests/saks/should_fail/saks007_fail.stderr

saks007_fail.hs:15:10: error:
    • Couldn't match kind ‘'True’ with ‘'False’
      Expected: G (*)
        Actual: F (*)
    • In the type ‘X Integer String’
      In the definition of data constructor ‘MkX’
      In the data declaration for ‘X’
